# mmp-toxicity-model-yuhen

./: LICENSE  README.md  main.py  pyproject.toml
notebooks/: ml_models.py  pca_analysis.py  results_viz.py  shap_analysis.py  structure_alerts.py  tanimoto_analysis.py
src/: config.py
src/data/: augment.py  featurize.py  loader.py  scaffold_split.py
src/evaluate/: metrics.py
src/model/: network.py
src/training/: cross_val.py  loops.py
src/utils/: seed.py
tests/: test_scaffold_split.py  test_scaffold_split_dataset.py
