[project]
name = "yuhen-model-v2"
version = "0.1.0"
description = "Reproducible molecular toxicity classifier — refactored from yuhen-model"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2",
    "rdkit>=2023.9",
    "mordred>=1.2",
    "scikit-learn>=1.4",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "catboost>=1.2",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "tqdm>=4.66",
    "shap>=0.44",
    "marimo>=0.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
